# rust-ipld-core

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: arb.rs  codec.rs  convert.rs  error.rs  ipld.rs  lib.rs  macros.rs
src/serde/: de.rs  error.rs  extract_links.rs  mod.rs  ser.rs
tests/: serde_deserialize.rs  serde_deserializer.rs  serde_serializer.rs
