[package]
name = "ipld-core"
version = "0.3.0"
authors = [
    "Volker Mische <volker.mische@gmail.com>"
]
repository = "https://github.com/ipld/rust-ipld-core"
edition = "2021"
description = "IPLD core types"
license = "MIT OR Apache-2.0"
categories = ["data-structures", "encoding"]

[features]
default = ["std"]
# Makes the error implement `std::error::Error` and the `Codec` trait available.
std = ["cid/std", "serde?/std"]
# Enables support for Serde serialization into/deserialization from the `Ipld` enum.
serde = ["dep:serde", "cid/serde-codec"]
# Enables support for property based testing.
arb = ["dep:quickcheck", "cid/arb"]

[dependencies]
cid = { version = "0.11.0", default-features = false, features = ["alloc"] }
quickcheck = { version = "1.0", optional = true }
serde = { version = "1.0.195", default-features = false, features = ["alloc"], optional = true }
serde_bytes = "0.11.5"

[dev-dependencies]
serde_derive = "1.0.197"
serde_json = "1.0.79"
serde_test = "1.0.132"
